<resources>
    <string name="app_name">KenKlin Admin</string>
    <string name="no_req_txt">No service requests made</string>
    <string name="service_req">Service Request</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm">Confirm</string>
    <string name="app_logo">app logo</string>
    <string name="reg_txt"><u>Sign up here</u></string>
    <string name="register">Register</string>
    <string name="verifying">Verifying…</string>
    <string name="verify">Verify</string>
    <string name="records_ref">Records</string>
    <string name="all_users">AppUsers</string>
    <string name="loading">Loading…</string>
    <string name="logging_in">Logging in…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin_login">Admin Login</string>
    <string name="managment_set">Management</string>
    <string name="admin_txt">Administrator</string>
    <string name="add_service_txt">Add Service</string>
    <string name="save_lbl">Save</string>
    <string name="enter_name">Enter Service Name</string>
    <string name="req_name">Name</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="select_lbl">Select…</string>
    <string name="serv_name_lbl">Service Name</string>
    <string name="select_service">Select Service</string>
    <string name="no_show">Nothing to show</string>
    <string name="service">Service</string>
    <string name="add_item">Add item</string>
    <string name="item">Item</string>
    <string name="price_lbl">Price</string>
    <string name="popmenu_active">Mark Active</string>
    <string name="popmenu_deliv">Mark Ready for Delivery</string>
    <string name="popmenu_complt">Mark Completed</string>
    <string name="popmenu_order">View Order</string>
    <string name="laundrylist_lbl">Laundry List</string>
</resources>
