<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_setup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetupActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_setup_serv"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:padding="@dimen/margin_tiny"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:focusable="false"
            android:onClick="Services_Dialog"
            android:longClickable="false"
            android:id="@+id/et_setup_serv"
            android:hint="@string/service"
            android:text="@string/select_lbl"
            android:textSize="@dimen/large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_set_noshow"
        android:visibility="gone"
        android:textAlignment="center"
        android:text="@string/no_show"
        app:layout_constraintBottom_toBottomOf="@id/recy_service_items"
        app:layout_constraintTop_toTopOf="@id/recy_service_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow
        android:onClick="add_item"
        android:id="@+id/tbr_add_item"
        android:background="@drawable/app_button_background"
        android:padding="@dimen/margin_tiny"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/input_setup_serv"
        app:layout_constraintTop_toTopOf="@id/input_setup_serv"
        app:layout_constraintLeft_toRightOf="@id/input_setup_serv"
        >

        <ImageButton
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_item_circle_18dp"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_item" />

        <TextView
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text"
            android:text="@string/item"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

    </TableRow>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recy_service_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@id/divider_view"
        app:layout_constraintTop_toBottomOf="@id/input_setup_serv"
        />

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/fab_add_service"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="add_service"
        android:padding="@dimen/margin_tiny"
        android:text="@string/add_service_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/med_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fab_add_service"
        app:layout_constraintRight_toLeftOf="@id/fab_add_service"
        app:layout_constraintTop_toTopOf="@id/fab_add_service"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:onClick="add_service"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>