<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/admin_login_layout"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/tv_divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="@dimen/normal_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tiny"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_login_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/normal_text" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/probar_login"
        android:indeterminate="true"
        android:layout_marginBottom="@dimen/margin_tiny"
        app:layout_constraintBottom_toTopOf="@id/input_login_email"
        app:layout_constraintRight_toRightOf="@id/input_login_password"
        app:layout_constraintLeft_toLeftOf="@id/input_login_password"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="admin_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/app_button_background"
        android:text="@string/admin_login"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/input_login_password"
        app:layout_constraintRight_toRightOf="@id/input_login_password"
        app:layout_constraintTop_toBottomOf="@id/input_login_password" />

</android.support.constraint.ConstraintLayout>